# rust-elm-architecture

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: main.yml
examples/basic/: Cargo.toml  package-lock.json  package.json  webpack.config.js
examples/basic/js/: index.js
examples/basic/src/: github.rs  lib.rs
examples/basic/src/app/: counter.rs  data_loading.rs  github.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs  utils.rs
src/: app.rs  command.rs  fetch.rs  github.rs  lib.rs  renderer.rs  virtual_dom.rs
