[package]
name = "rust-elm-architecture"
version = "0.1.0"
authors = ["Peter Stuart <peter@peterstuart.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true

[dependencies]
async-trait = "0.1.51"
console_error_panic_hook = { version = "0.1.5", optional = true }
console_log = { version = "0.2", optional = true, features = ["color"] }
js-sys = "0.3.51"
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"

[dependencies.web-sys]
version = "0.3.51"
features = [
  "Document",
  "Element",
  "Headers",
  "HtmlCollection",
  "HtmlElement",
  "HtmlInputElement",
  "InputEvent",
  "Node",
  "NodeList",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Text",
  "Window",
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["console_log", "console_error_panic_hook"]
