[package]
name = "basic"
version = "0.1.0"
authors = ["Peter Stuart <peter@peterstuart.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
console_error_panic_hook = "0.1.5"
console_log = { version = "0.2", features = ["color"] }
log = "0.4"
rust-elm-architecture = { path = "../../" }
serde = { version = "1.0.127", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"